# FUYAO

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Experiments/: CMakeLists.txt
Experiments/00/: CMakeLists.txt
Experiments/01/: README.md  service_config.json
Experiments/01/debug/: fn_a.json  fn_b.json  fn_c.json  fn_d.json  fn_e.json  fn_f.json  service_config.json
Experiments/01/scripts/: invoke.sh  start_ce_launcher.sh  start_drc.sh
Experiments/01/src/fn_a/: fn_a.cpp
Experiments/01/src/fn_b/: fn_b.cpp
Experiments/01/src/fn_c/: fn_c.cpp
Experiments/01/src/fn_e/: fn_e.cpp
Experiments/01/wrk2_scripts/: exp-01-ce.lua
Experiments/02/: README.md  service_config.json
Experiments/02/k8s/: third-party.yml
Experiments/02/scripts/: register_movieid.py
Experiments/02/src/0_ComposeReviewService/: ComposeReview.cpp
Experiments/02/src/1_MovieIdService/: MovieIdHandler.h
Experiments/03/: CMakeLists.txt  README.md
Experiments/03/src/: CMakeLists.txt
Experiments/03/src/3_ComposePostService/: UploadText3.cpp
Experiments/04/: README.md  main.py  service_config.json
Experiments/04/debug/: bar.json  foo.json
Experiments/05/: CMakeLists.txt  README.md  finra_config.json
Experiments/05/common/: utils.h
Experiments/05/debug/: last_px.json  margin_balance.json
Experiments/05/scripts/: start_all_launcher.sh
Experiments/05/src/: CMakeLists.txt
Experiments/05/src/stage_0/: lastpx.cpp  marketdata.cpp  side.cpp  trddate.cpp  volume.cpp
Experiments/05/src/stage_1/: marginBalance.cpp
Experiments/06/: CMakeLists.txt  README.md
Experiments/06/debug/: service_config.json
Experiments/06/scripts/: invoke.sh  start_drc.sh  stop_all.sh
Experiments/06/src/0_front_end/: front_end.cpp
Experiments/06/src/1_back_end/: back_end.cpp
Experiments/06/utils/: utils.h  utils_for_test.h
Experiments/06/wrk2_scripts/: exp-01-ce.lua
Experiments/07/: CMakeLists.txt  README.md
Experiments/07/debug/: service_config.json
Experiments/07/include/tensorflow/bazel-bin/tensorflow/include/absl/base/: config.h
Experiments/07/scripts/: start_all.sh
Experiments/07/src/0_resize/: resize.cpp
Experiments/07/src/1_label/: label.cpp
Experiments/07/src/2_average/: average.cpp
Experiments/07/utils/: utils.h
Experiments/08/: CMakeLists.txt  README.md
Experiments/08/debug/: service_config.json
Experiments/08/scripts/: invoke.sh  start_drc.sh  stop_all.sh
Experiments/08/src/downstream/: downstream.cpp
Experiments/08/src/upstream/: upstream.cpp
Experiments/08/wrk2_scripts/: exp-01-ce.lua
Experiments/09/: CMakeLists.txt
Experiments/09/debug/: service_config.json  start.json
Experiments/09/scripts/: clean.py  compose-review.lua  finra.lua  invoke.sh  invoke_finra.sh  register_movieid.py  start_all.sh  stop_all.sh
Experiments/09/src/0_start/: start.cpp  start_for_chain.cpp  start_for_finra.cpp  start_for_media.cpp
Experiments/09/src/1_end/: end.cpp
Experiments/09/src/2_register/: register.cpp
Experiments/09/utils/: utils.h
Experiments/10/: CMakeLists.txt  exp10_config.json
Experiments/10/fuyao_scale_src/: CMakeLists.txt
Experiments/10/fuyao_scale_src/fn_a/: fn_a.cpp
Experiments/10/fuyao_scale_src/fn_b/: fn_b.cpp
Experiments/10/rdma_scale_src/: CMakeLists.txt  rdma_rc.cpp  rdma_rc_client.cpp  rdma_rc_server.cpp
Experiments/10/scripts/: invoke.sh  start_all_launcher.sh  wrk.lua
Experiments/10/test/: CMakeLists.txt  test_time.cpp
Experiments/10/utils/: utils.h
Experiments/11/: CMakeLists.txt
Experiments/11/common/: utils.h  utils_for_test.h
Experiments/11/data/: yfinance_test.csv
Experiments/11/debug/: last_px.json  service_config.json
Experiments/11/scripts/: start_all_launcher.sh
Experiments/11/src/stage_0/: run_audit.cpp
Experiments/11/src/stage_1/: marginBalance.cpp
Experiments/11/test/: CMakeLists.txt  test_json.cpp
Experiments/14/: CMakeLists.txt  client.cpp  server.cpp
Experiments/bench/01_transfer_data/: invoke.sh  service_config.json  start_all.sh  stop_all.sh
Experiments/bench/02_media_service/: build_all.sh  invoke.sh
Experiments/bench/02_media_service_inter/: build_all.sh  service_config.json  start_all.sh
Experiments/bench/06_function_chain/: chain.lua  invoke.sh  invoke_wrk.sh  service_config.json  start_all.sh  stop_all.sh
Experiments/bench/06_function_chain_inter/: chain.lua  invoke.sh  invoke_wrk.sh  service_config.json  start_all.sh  stop_all.sh
Experiments/bench/09_pheromone_client/: chain.lua  invoke_chain.sh  invoke_finra.sh  service_config.json  start_all.sh  stop_all.sh
Experiments/bench/11_finra/: build_all.sh  invoke.sh  service_config.json  start_all.sh  stop_all.sh
Experiments/bench/inter-node/transfer_data/: README.md  build_all.sh  invoke.sh  service_config.json  start_all.sh  stop_all.sh
Experiments/bench/intra-node/02_media_service/: README.md  build_all.sh  compose-review.lua  service_config.json  start_all.sh  stop_all.sh
Experiments/bench/intra-node/finra/: README.md  build_all.sh  finra.lua  invoke_latency.sh  service_config.json  set_qps.sh  start_all_fuyao.sh  start_all_nightcore.sh  stop_all.sh
Experiments/bench/intra-node/function_chain/: README.md  build_all.sh  chain.lua  invoke_latency.sh  q100  service_config.json  set_qps.sh  start_all_fuyao.sh  start_all_nightcore.sh  stop_all.sh
Experiments/bench/intra-node/media_service/: README.md  build_all.sh  clean.py  invoke.sh  register_movieid.py  service_config.json  start_all_fuyao.sh  start_all_nightcore.sh  stop_all.sh  test.py
Experiments/bench/intra-node/transfer_data/: README.md  build_all.sh  invoke.sh  service_config.json  start_all.sh  stop_all.sh
Experiments/bench/pheromone_loadgen/: README.md  build_all.sh  compose-review.lua  finra.lua  invoke_chain.sh  invoke_finra.sh  invoke_media.sh  service_config.json  start_all.sh  stop_all.sh
